[package]
name = "sniffer-wall"
version = "0.1.0"
authors = ["王跃 <wangyue1@ly.com>"]
description = "探析之墙"

[dependencies]
bytes = "0.4"
num_cpus = "1.0"
log = "0.3"
#pretty_env_logger = "0.1"
log4rs = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
tokio-timer = "0.1"
url = "1.4"
#kafka = "0.7"